--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ The goal of lzstring-r is to provide an R wrapper for the [lzstring C++ library]
 You can install the released version of lzstringr from CRAN with:
 
 ``` r
-install.packages("lzstringr")
+install.packages("lzstring")
 ```
 
 You can install the development version of lzstringr from [GitHub](https://github.com/) with:
