--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The goal of lzstring-r is to provide an R wrapper for the [lzstring C++ library]
 
 ## Installation
 
-You can install the released version of lzstringr from CRAN with:
+You can install the released version of lzstringr from [CRAN](https://cran.r-project.org/web/packages/lzstring/index.html) with:
 
 ``` r
 install.packages("lzstring")
