--- a/README.Rmd
+++ b/README.Rmd
@@ -23,60 +23,81 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/lzstring)](https://CRAN.R-project.org/package=lzstring)
 [![Monthly metacran downloads](https://cranlogs.r-pkg.org/badges/lzstring)](https://cran.r-project.org/package=lzstring)
 [![Total metacran downloads](https://cranlogs.r-pkg.org/badges/grand-total/lzstring)](https://cran.r-project.org/package=lzstring)
-
 <!-- badges: end -->
 
+The goal of **lzstring-r** is to provide an R wrapper for the [lzstring C++ library](https://github.com/andykras/lz-string-cpp). [lzstring](https://github.com/pieroxy/lz-string) is originally a JavaScript library that provides fast and efficient string compression and decompression using a [LZ-based algorithm](https://en.wikipedia.org/wiki/Lempel–Ziv–Welch).
 
-The goal of lzstring-r is to provide an R wrapper for the [lzstring C++ library](https://github.com/andykras/lz-string-cpp). [lzstring](https://github.com/pieroxy/lz-string) is originally a JavaScript library that provides fast and efficient string compression and decompression using a [LZ-based algorithm](https://en.wikipedia.org/wiki/Lempel–Ziv–Welch). Credit goes to [Winston Chang](https://github.com/wch) for spotting this missing R package and guiding me over at the R Shinylive repo—check out his awesome contributions which this repo is based on [here](https://github.com/posit-dev/r-shinylive/issues/70) and [here](https://github.com/posit-dev/r-shinylive/pull/71). Also, shoutout to Andy Kras for his implementation in C++ of lzstring, which you can find right [here](https://github.com/andykras/lz-string-cpp), and [pieroxy](https://github.com/pieroxy), the original brain behind lzstring in JavaScript—peek at his work over [here](https://github.com/pieroxy/lz-string). 
+Credit goes to [Winston Chang](https://github.com/wch) for spotting this missing R package and guiding me over at the R Shinylive repo—check out his awesome contributions which this repo is based on [here](https://github.com/posit-dev/r-shinylive/issues/70) and [here](https://github.com/posit-dev/r-shinylive/pull/71). Also, shoutout to Andy Kras for his implementation in C++ of lzstring, which you can find right [here](https://github.com/andykras/lz-string-cpp), and [pieroxy](https://github.com/pieroxy), the original brain behind lzstring in JavaScript—peek at his work over [here](https://github.com/pieroxy/lz-string). 
+
+---
 
 ## Installation
 
-You can install the released version of lzstringr from [CRAN](https://CRAN.R-project.org/package=lzstring) with:
+You can install the released version of lzstring from [CRAN](https://CRAN.R-project.org/package=lzstring) with:
 
-``` r
+```r
 install.packages("lzstring")
 ```
 
-You can install the development version of lzstringr from [GitHub](https://github.com/) with:
+Or the development version from [GitHub](https://github.com/parmsam/lzstring-r):
 
-``` r
+```r
 # install.packages("devtools")
 devtools::install_github("parmsam/lzstring-r")
 ```
 
-## Example
+---
 
-This is a basic example which shows you how to solve a common problem:
+## Usage
+
+### Basic Example
 
 ```{r example}
 library(lzstring)
 
-# text data
-message = "The quick brown fox jumps over the lazy dog!";
-
-compressed = lzstring::compressToBase64(message)
+# Text data
+message <- "The quick brown fox jumps over the lazy dog!"
+compressed <- lzstring::compressToBase64(message)
 compressed
 
-decompressed = lzstring::decompressFromBase64(compressed)
+decompressed <- lzstring::decompressFromBase64(compressed)
 cat(decompressed)
 ```
 
-### JSON data
+---
+
+### Compressing and Decompressing JSON
 
 ```{r}
-# JSON data
 json_data <- list(name = "John Doe", age = 30, email = "john.doe@example.com")
 json_string <- jsonlite::toJSON(json_data)
 
-compressed = lzstring::compressToBase64(json_string)
+compressed <- lzstring::compressToBase64(json_string)
 compressed
 
-decompressed = lzstring::decompressFromBase64(compressed)
+decompressed <- lzstring::decompressFromBase64(compressed)
 identical(json_string, decompressed)
 cat(decompressed)
 ```
 
-### R code
+---
+
+### Round-Trip for Complex R Objects
+
+> **Note:** Always serialize complex R objects (lists, data frames, etc.) to JSON before compressing. After decompression, deserialize back to R.
+
+```{r}
+obj <- list(a = 1, b = "text", c = list(x = 1:3))
+json <- jsonlite::serializeJSON(obj)
+lz <- lzstring::compressToBase64(json)
+json2 <- lzstring::decompressFromBase64(lz)
+obj2 <- jsonlite::unserializeJSON(json2)
+identical(obj, obj2) # TRUE
+```
+
+---
+
+### R Code Example
 
 ```{r}
 r_code <- '
@@ -94,11 +115,13 @@ filtered_data <- filter(data, age > 25)
 # Add a new column with updated salary
 data <- mutate(data, updated_salary = salary * 1.05)
 '
-compressed = lzstring::compressToBase64(r_code)
+compressed <- lzstring::compressToBase64(r_code)
 compressed
-decompose = lzstring::decompressFromBase64(compressed)
+decompose <- lzstring::decompressFromBase64(compressed)
 cat(decompose)
 ```
+
+---
 
 ### Compress Shinylive Hashes
 
@@ -120,9 +143,53 @@ cat(paste0("https://shinylive.io/r/app/#code=", files_lz))
 ```
 
 ### Decompress Shinylive Hashes
+
 ```{r example2-shinylive}
 x <- lzstring::decompressFromEncodedURIComponent("NobwRAdghgtgpmAXGKAHVA6VBPMAaMAYwHsIAXOcpMAMwCdiYACAZwAsBLCbDOAD1R04LFkw4xUxOmTERUAVzJ4mQiABM4dZfI4AdCPp0YuCsgH0WAGw4a6ACl2RHyxwDlnTAAzKAjJ+9MAEyeAJT64RAAAqq2GBR8ZPoaNExkCXYhiPpMOSpwZPJ0EEw0jhAAVIFioiAmihgQGUzlQQC+jvpgrQC6QA")
 y <- jsonlite::fromJSON(x)
 cat(y$name)
 cat(y$content)
 ```
+
+---
+
+## Encoding and Limitations
+
+> **Important:**  
+> - lzstring operates on strings. For non-string or binary data, encode as JSON or base64 first.  
+> - Always ensure your input is UTF-8 encoded.  
+> - If you compress an R object directly (without serialization), the result may not decompress as expected.
+
+---
+
+## Troubleshooting
+
+- **Why do I get an empty string after decompressing?**  
+  This may happen if the input was not properly encoded, or if the compressed string is corrupted.
+
+- **Why does my decompressed JSON fail to parse?**  
+  Ensure you serialize your R object to JSON (or use `serializeJSON`) before compressing.
+
+- **Can I compress binary data?**  
+  Encode it as base64 or hex first, then compress the resulting string.
+
+---
+
+## Use Cases
+
+- Sharing Shiny app code via URL (see [Shinylive](https://shinylive.io/r/app/))
+- Compact storage of large JSON blobs
+- Embedding compressed data in web apps
+- **Automatic Shinylive links in documentation:**  
+  The [roxy.shinylive](https://github.com/insightsengineering/roxy.shinylive) package uses lzstring to provide a [roxygen2](https://roxygen2.r-lib.org/) extension that automatically takes the code from the `@examples` tag and creates a URL to the [shinylive.io](https://shinylive.io/r/app/) service. During documentation build, a new section is added to the function manual containing the link and an iframe to the application itself.
+
+---
+
+## References
+
+- [lz-string JavaScript library (pieroxy)](https://github.com/pieroxy/lz-string)
+- [lz-string C++ port (Andy Kras)](https://github.com/andykras/lz-string-cpp)
+- [Shinylive for R](https://github.com/posit-dev/r-shinylive)
+- [roxy.shinylive](https://github.com/insightsengineering/roxy.shinylive)
+
+---
